[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Death.gd" type="Script" id=1]

[node name="Death" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 467.0
margin_top = 260.0
margin_right = 557.0
margin_bottom = 340.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HighScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_left = 11.0
margin_right = 79.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "High Score"

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_left = 27.0
margin_top = 18.0
margin_right = 62.0
margin_bottom = 32.0
size_flags_horizontal = 4
text = "Score"

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 90.0
margin_bottom = 56.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "PLAY AGAIN"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 90.0
margin_bottom = 80.0
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
